# freefloating_gazebo_demo

./: CMakeLists.txt  README.md  package.xml
config/: arm5e_control.yaml  arm5e_control.yaml~  g500_control.yaml  g500_control.yaml~  steering_thrusters.yaml  vectored.yaml
launch/: PoseJointsCurrent.yaml  PoseStampedGUI.yaml  VelocityJointsCurrent.yaml  g500arm5e.launch  g500arm5e_gazebo.launch  g500arm5e_manual.launch  g500arm5e_spawner.launch  manual.launch  slider_publisher  steering_manual.launch  steering_thrusters.launch  test_g500arm5e.launch  vectored.launch
scenes/: g500arm5e_bbox.xml  g500arm5e_bbox.xml~
scripts/: body_bridge.py
src/: freefloating_gazebo_demo.cpp
urdf/: arm5e.xacro  bbox.xacro  bbox.xacro~  bbox_uwsim.urdf~  g500.xacro  g500_dummy.urdf  g500arm5e_uwsim.urdf  steering_thrusters.urdf  steering_thrusters.xacro  vectored.xacro
