<?xml version="1.0"?>
<package>
  <name>freefloating_gazebo_demo</name>
  <version>1.0.0</version>
  <description>This package contains an example of underwater robot using the freefloating_gazebo plugin.</description>
  <maintainer email="olivier_kermorgant@yahoo.fr">Olivier Kermorgant</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-underwater/freefloating_gazebo_demo</url>

  <author>Olivier Kermorgant</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>