<?xml version="1.0"?>
<package>
  <name>freefloating_gazebo_demo</name>
  <version>1.0.0</version>
  <description>This package contains an example of underwater robot using the freefloating_gazebo plugin.</description>
  <maintainer email="olivier_kermorgant@yahoo.fr">Olivier Kermorgant</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/freefloating-gazebo/freefloating_gazebo_demo</url>

  <author>Olivier Kermorgant</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>freefloating_gazebo</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
